# ScreepsDashboard

./: .gitignore  LICENSE  README.en.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
scripts/: count-lines.js  count-lines.sh  fetch-resource-thumbnails.mjs
scripts/release/: release.mjs  verify-tag-version.mjs  version-sync.mjs  version.mjs
src-next/: eslint.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
src-next/app/: globals.css  layout.tsx  page.tsx
src-next/components/: app-nav.tsx  app-shell.tsx  auth-guard.tsx  chunk-load-recovery.tsx  circular-progress.tsx  console-panel.tsx  dashboard-panel.tsx  login-panel.tsx  market-panel.tsx  market-resource-icon.tsx  messages-panel.tsx  metric-bar.tsx  metric-cell.tsx  placeholder-page.tsx  public-rooms-panel.tsx  rankings-panel.tsx  resource-thumb-icon.tsx  resources-panel.tsx  room-detail-panel.tsx  room-detail-route.tsx  room-gameplay-map-official.tsx  room-gameplay-map-optimized.tsx  room-gameplay-map.tsx  route-transition.tsx  settings-panel.tsx  terrain-thumbnail.tsx  window-controls.tsx
src-next/stores/: auth-store.ts  settings-store.ts
src-next/types/: screeps-renderer.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: console.rs  http.rs  lib.rs  main.rs  messages.rs  requests.rs  rooms.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-nav.tsx  app-shell.tsx  auth-guard.tsx  dashboard-panel.tsx  login-panel.tsx  placeholder-page.tsx  public-rooms-panel.tsx  settings-panel.tsx
(+52 files in other folders)
