[package]
name = "screeps-dashboard"
version = "0.1.0"
description = "Screeps Dashboard - A desktop app for monitoring your Screeps game"
authors = ["you"]
edition = "2021"

[lib]
name = "screeps_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
